<resources>
    <string name="app_name">ServiceBestPractice</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">stop_service</string>
    <string name="bind_service">bind_service</string>
    <string name="unbind_service">unbind_service</string>
    <string name="start_intentservice">Start IntentService</string>
    <string name="start_long_run_service">Start Long Run Service</string>
</resources>
